Added the Rise of the Ronin card in index.html. Added icon images to equipment/soul_cores/img/. Added more content to DOTSamurai_enemies and DOTSamurai_texts .txt files.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <!-- ========== ========== ==========
     Card Section
     ========== ========== ========== -->
-    <section class="h-auto mt-6 mb-6 flex flex-col justify-center items-center gap-6
-        lg:h-screen lg:flex-row lg:mt-0 lg:mb-0">
+    <section class="mt-6 mb-6 flex flex-wrap justify-center items-center gap-6
+        lg:h-screen lg:mt-0 lg:mb-0">
         
         <!-- Nioh 2 Card -->
         <a href="./nioh2/nioh2.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
@@ -42,6 +42,12 @@
         <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
             <img src="./img/wolong_card.png" alt="">
             <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
+        </a>
+
+        <!-- Rise of the Ronin Card -->
+        <a href="" class="group mask w-fit flex flex-col items-center bg-white border border-black">
+            <img src="./img/rotr_card.png" alt="">
+            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Rise of the Ronin</span>
         </a>
     </section>
 
