--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -261,7 +261,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="text-red-500 font-bold">There are a total of 78 Soul Cores in Nioh 2</span>. 
+                <span class="text-red-600 font-bold">There are a total of 78 Soul Cores in Nioh 2</span>. 
                 <span class="text-sky-300 font-bold">51 Soul Cores</span> are in the base game, <span class="text-sky-300 font-bold">6 Soul Cores</span>
                 are in The Tengu's Disciple (DLC 1), <span class="text-sky-300 font-bold">9 Soul Cores</span> are in The Darkness in the Capital
                 (DLC 2), and <span class="text-sky-300 font-bold">12 Soul Cores</span> are in The First Samurai (DLC 3).
@@ -328,8 +328,8 @@
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                 </tr>
 
                 <!-- ==========
@@ -339,25 +339,74 @@
                     <tr>
                         <td rowspan="2"><a class="group w-[140px] flex flex-col justify-center items-center gap-3" href="">
                             <span class="text-sky-400 group-hover:text-sky-600">Gaki</span>
-                            <img src="./img/gaki.png" alt="">
+                            <img src="./img/gaki.png" alt="Gaki Soul Core image">
                         </a></td>
                         <td rowspan="2">4</td>
                         <td rowspan="2">3</td>
                         <td rowspan="2" class="max-w-[150px]">No</td>
-                        <td>Anima Charge (Dark Realm)</td>
+                        <td>
+                            <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                            Anima Charge (Dark Realm)
+                        </td>
                         <td>8.1%</td>
                         <td>9.0%</td>
                         <td>10.2%</td>
                         <td>11.3%</td>
                     </tr>
                     <tr>
-                        <td>Life Drain (Yokai Ability Hit)</td>
+                        <td>
+                            <img class="inline mx-1" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                            Life Drain (Yokai Ability Hit)
+                        </td>
                         <td>D-</td>
                         <td>C-</td>
                         <td>B-</td>
                         <td>A-</td>
                     </tr>
                 </tbody>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                
 
                 <!-- ==========
                 Enki
@@ -1692,8 +1741,8 @@
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                 </tr>
 
                 <!-- ==========
@@ -1893,8 +1942,8 @@
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                 </tr>
 
                 <!-- ==========
@@ -2175,8 +2224,8 @@
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                 </tr>
 
                 <!-- ==========
