Updated the x-axis padding for all tables across multiple .html files. Fixed the alternating colors in weapon_texts.html. Updated DOTSamurai_texts.txt.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -368,7 +368,7 @@
     Demon Parade Picture Scroll Attribute Tables
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
             2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
@@ -395,6 +395,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-rare-text-color">Melee Damage</span></td>
                     <td>6.0 %</td>
@@ -442,6 +445,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-uncommon-text-color">Melee Ki Damage</span></td>
                     <td>7.0 %</td>
@@ -477,6 +483,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>Melee Ki Consumption</td>
                     <td>-5.0 %</td>
@@ -520,6 +529,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>Guard Ki Consumption</td>
                     <td>-6.0 %</td>
@@ -547,6 +559,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-uncommon-text-color">Ninjutsu Power</span></td>
                     <td>40</td>
@@ -593,6 +608,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-exotic-text-color">Damage Bonus (Ninjutsu Power)</span></td>
                     <td>B+</td>
@@ -616,6 +634,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-divine-text-color">Counter-Human Tactics</span></td>
                     <td>B</td>
@@ -639,6 +660,9 @@
                     <th>Max Known Value</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>Amrita Earned</td>
                     <td>10.0 %</td>
@@ -659,7 +683,6 @@
                     <td>Toughness</td>
                     <td>15</td>
                 </tr>
-
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-uncommon-text-color">Anima Charge</span></td>
                     <td>6.0 %</td>
@@ -780,6 +803,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ultimate Constitution</span>
@@ -898,6 +924,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Avaricious</span></td>
                     <td>Greatly increases the loot drop rate in exchange for reducing your maximum health (30%).</td>
