--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -298,9 +298,9 @@
 
     <!-- ========== ========== ========== ========== ==========
     Head Gear Smithing Texts
-    ========== ========== ========== ========== ========== -->    
+    ========== ========== ========== ========== ========== -->
     <section id="headgear" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Head Gear Smithing Texts</h2>
@@ -309,7 +309,7 @@
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
-                Header 
+                Header
                 ========== -->
                 <tr>
                     <th>Smithing Text</th>
@@ -709,9 +709,9 @@
 
     <!-- ========== ========== ========== ========== ==========
     Armor Set Smithing Texts
-    ========== ========== ========== ========== ========== -->    
+    ========== ========== ========== ========== ========== -->
     <section id="armor-set" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Armor Set Smithing Texts</h2>
@@ -720,7 +720,7 @@
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
-                Header 
+                Header
                 ========== -->
                 <tr>
                     <th>Smithing Text</th>
@@ -768,7 +768,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Lost Sword (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Lost Sword</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -801,7 +801,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Warrior (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Warrior</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -906,7 +906,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Nine Symbols (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Nine Symbols</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -975,7 +975,7 @@
 						<span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Shrine Of Oaths (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Shrine Of Oaths</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -1013,7 +1013,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Scented Letter (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Scented Letter</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -1318,7 +1318,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
@@ -1513,7 +1513,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation (Dream Of The Samurai)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Nation</a> <span>(Dream Of The Samurai)</span>
 					</td>
 				</tr>
 
@@ -1581,7 +1581,7 @@
                         <span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Way Of The Warrior: Veteran (Dream Of The Nioh)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Way Of The Warrior: Veteran</a> <span>(Dream Of The Nioh)</span>
 					</td>
 				</tr>
 
@@ -1614,7 +1614,7 @@
 						<span>-</span>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">The Shrine Of Oaths (Dream Of The Strong)</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Shrine Of Oaths</a> <span>(Dream Of The Strong)</span>
 					</td>
 				</tr>
 
