Fixed the order of buttons in nioh2 and equipment_index .html files. Fixed the x-axis spacing for all tables in various .html files.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -776,12 +776,9 @@
     Ultimate Stats
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
-            <!-- ==========
-            section header
-            ========== -->
             <h2 id="ultimate_stats" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Ultimate Stats Table</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -794,12 +791,12 @@
                 them. 
             </p>
 
-            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
                 <tr>
-                    <th class="">Ultimate Attribute</th>
+                    <th>Ultimate Attribute</th>
                     <th>Description</th>
                 </tr>
 
@@ -899,12 +896,9 @@
     Path Stats
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
-            <!-- ==========
-            section header
-            ========== -->
             <h2 id="path_stats" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Path Stats Table</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -915,7 +909,7 @@
                 of the Path stats, along with their descriptions. 
             </p>
 
-            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
                 <!-- ==========
                 Header 
                 ========== -->
