--- a/nioh2/equipment/soul_cores/farming_cores.html
+++ b/nioh2/equipment/soul_cores/farming_cores.html
@@ -259,7 +259,7 @@
             <ul class="list-disc list-inside px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <li><span class="text-red-600 font-bold">(R)</span> = The specific enemy respawns in the Dark Realm.</li>
                 <li>All levels are on Dream of the Nioh (NG+4) difficulty, or are in the Underworld.</li>
-                <li>Demon Parade Picture Scrolls: Scrolls of the Nioh / Scrolls of the Damned.</li>
+                <li>Demon Parade Picture Scroll Difficulty: Scrolls of the Nioh / Scrolls of the Damned.</li>
             </ul>
         </div>
     </section>
