--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -314,7 +314,7 @@
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Ki Pulse</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-yellow-400" href="">Skills / Skill Trees</a>
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Skill Trees / Skills</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Yokai Shift & Burst Counters</a>
@@ -356,6 +356,9 @@
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Armor</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
+                    <a class="px-2 w-full text-xl text-yellow-400" href="">Accessories</a>
+                </li>
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="">Ninjutsu</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
@@ -366,9 +369,6 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/guardian_spirits/guardian_spirits.html">Guardian Spirits</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
-                    <a class="px-2 w-full text-xl text-yellow-400" href="">Accessories</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-red">
                     <a class="px-2 w-full text-xl text-yellow-400" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/picture_scrolls/picture_scrolls.html">Demon Parade Picture Scrolls</a>
