--- a/nioh2/equipment/soul_cores/cores_index.html
+++ b/nioh2/equipment/soul_cores/cores_index.html
@@ -249,7 +249,7 @@
                 <!-- ==========
                 Soul Core List (Button 1)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_list.html">
                     
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
@@ -259,7 +259,7 @@
                 <!-- ==========
                 Soul Core Mechanics (Button 2)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
@@ -269,7 +269,7 @@
                 <!-- ==========
                 Attribute Conflict Table (Button 3)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/cores_attributes.html">
 
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
@@ -279,7 +279,7 @@
                 <!-- ==========
                 Farming Ethereal Soul Cores (Button 4)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/equipment/soul_cores/farming_cores.html">
 
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
