Updated content in farming_cores.html. Updating the table header spacing in cores_list.html. fixed spelling errors in armor_texts, weapon_texts, misc_texts, and recommended_missions .html files.

--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -304,6 +304,9 @@
         <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
+            <!-- ==========
+            section header
+            ========== -->
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Base Game Soul Cores</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -321,7 +324,7 @@
                     <th>Soul Core</th>
                     <th>Attunement Cost</th>
                     <th>Yokai Ability Cost</th>
-                    <th class="max-w-[250px]">Transform Invincibility? (Avoids Grab Attacks)</th>
+                    <th class="max-w-[200px]">Transform Invincibility? (Avoids Grab Attacks)</th>
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
@@ -1711,7 +1714,7 @@
     The Tengu's Disciple (DLC 1) Soul Cores
     ========== ========== ========== ========== ========== -->
     <section id="dlc1" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
@@ -1728,13 +1731,13 @@
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos"
                 id="dlc1-table">
                 <!-- ==========
-                Header 
+                Header
                 ========== -->
                 <tr>
                     <th>Soul Core</th>
                     <th>Attunement Cost</th>
                     <th>Yokai Ability Cost</th>
-                    <th class="max-w-[250px]">Transform Invincibility? (Avoids Grab Attacks)</th>
+                    <th class="max-w-[200px]">Transform Invincibility? (Avoids Grab Attacks)</th>
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
@@ -1912,7 +1915,7 @@
     Darkness In The Capital (DLC 2) Soul Cores
     ========== ========== ========== ========== ========== -->
     <section id="dlc2" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
@@ -1929,13 +1932,13 @@
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos"
                 id="dlc2-table">
                 <!-- ==========
-                Header 
+                Header
                 ========== -->
                 <tr>
                     <th>Soul Core</th>
                     <th>Attunement Cost</th>
                     <th>Yokai Ability Cost</th>
-                    <th class="max-w-[250px]">Transform Invincibility? (Avoids Grab Attacks)</th>
+                    <th class="max-w-[200px]">Transform Invincibility? (Avoids Grab Attacks)</th>
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
@@ -2194,7 +2197,7 @@
     The First Samurai (DLC 3) Soul Cores
     ========== ========== ========== ========== ========== -->
     <section id="dlc3" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
             <!-- ==========
@@ -2211,13 +2214,13 @@
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos"
                 id="dlc3-table">
                 <!-- ==========
-                Header 
+                Header
                 ========== -->
                 <tr>
                     <th>Soul Core</th>
                     <th>Attunement Cost</th>
                     <th>Yokai Ability Cost</th>
-                    <th class="max-w-[250px]">Transform Invincibility? (Avoids Grab Attacks)</th>
+                    <th class="max-w-[200px]">Transform Invincibility? (Avoids Grab Attacks)</th>
                     <th class="">Special Effects</th>
                     <th>Base Rank 1-4</th>
                     <th>Rank 9</th>
