--- a/nioh2/tools/smithing_texts/misc_texts.html
+++ b/nioh2/tools/smithing_texts/misc_texts.html
@@ -434,7 +434,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Herbal Remedy</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye of The Beholder</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a>
 					</td>
 				</tr>
 
