--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -461,7 +461,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
@@ -894,7 +894,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
@@ -1024,7 +1024,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
@@ -1292,7 +1292,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
                 </tr>
@@ -1405,7 +1405,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
@@ -1547,7 +1547,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 					</td>
 				</tr>
