--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -525,7 +525,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -568,7 +568,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -608,7 +608,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -675,7 +675,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -990,7 +990,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1026,7 +1026,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1198,7 +1198,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1220,7 +1220,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1261,7 +1261,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1419,7 +1419,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1433,7 +1433,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1447,7 +1447,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1461,7 +1461,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1659,7 +1659,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1770,7 +1770,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1822,7 +1822,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -1879,7 +1879,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2175,7 +2175,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2217,7 +2217,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2244,7 +2244,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2426,7 +2426,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2581,7 +2581,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2687,7 +2687,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -2783,7 +2783,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3067,7 +3067,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3178,7 +3178,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3287,7 +3287,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3404,7 +3404,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3463,7 +3463,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3509,7 +3509,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3619,7 +3619,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3633,7 +3633,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3668,7 +3668,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3824,7 +3824,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
@@ -3909,7 +3909,7 @@
 							<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 						</td>
 						<td>
-							<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+							<a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a><br><br>
 							<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
 						</td>
 					</tr>
