Updated content for better sentence structure in cores_attributes and cores_list .html files. Added more information to DOTSamurai_enemies.txt.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -267,11 +267,11 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                The following tables are grouped into 9 tables. Stats within a single table conflict each other, except for the last
-                table. All attributes in the last table do not conflict with each other, nor do they conflict with the other 
-                attributes in the other 8 tables. Ex) Looking at the 8th table (Power Stats), both Ninjutsu Power and Onmyo Magic
-                Power are in the same table. A Soul Core that already has Ninjutsu Power <span class="font-bold">CANNOT</span>
-                roll the Onmyo Magic Power attribute. They conflict.
+                The following information is grouped into 9 tables. Stats within a single table conflict each other, except for 
+                the last table. All attributes in the last table do not conflict with each other, nor do they conflict with the 
+                other attributes in the other 8 tables. Ex) Looking at the 8th table (Power Stats), both Ninjutsu Power and 
+                Onmyo Magic Power are in the same table. A Soul Core that already has Ninjutsu Power cannot roll the Onmyo Magic 
+                Power attribute. They conflict.
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
