--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -291,7 +291,7 @@
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 Below is a full list of all of the Soul Cores present in Nioh 2. You can click on an individual Soul Core to see
-                more information about the enemy that drop that Soul Core.
+                more information about the enemy that drops that Soul Core.
             </p>
         </div>
     </section>
