Added more content to DOTSamurai_enemies, and DOTSamurai_texts .txt files. Updated the color for the text in the header for the tables in cores_attributes, and farming_cores .html.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -304,8 +304,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -704,8 +704,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -836,8 +836,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -884,8 +884,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -950,8 +950,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -1000,8 +1000,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -1050,8 +1050,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -1108,8 +1108,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
@@ -1158,8 +1158,8 @@
                     <th>Stat</th>
                     <th>Rank 1</th>
                     <th>Rank 9</th>
-                    <th>Rank 20</th>
-                    <th>Rank 30</th>
+                    <th><span class="text-divine-text-color">Rank 20</span></th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>Possible Inheritable ?</th>
                 </tr>
 
