--- a/nioh2/equipment/soul_cores/farming_cores.html
+++ b/nioh2/equipment/soul_cores/farming_cores.html
@@ -290,7 +290,7 @@
                 Header
                 ========== -->
                 <tr>
-                    <th>Soul Core</th>
+                    <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Soul Core</span></th>
                     <th>Location</th>
                 </tr>
 
