--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -275,7 +275,8 @@
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                Anima Bonus (Scorched Enemy) vs. Anima Bonus (Enemy Scorched): <br>
+                Anima Bonus (<img class="inline mx-1" src="./img/debuff_icon.png" alt="Debuff icon"><span class="text-debuff-text-color">Scorched</span> Enemy) vs. 
+                Anima Bonus (Enemy <img class="inline mx-1" src="./img/debuff_icon.png" alt="Debuff icon"><span class="text-debuff-text-color">Scorched</span>): <br><br>
                 Scorched Enemy = Continuous bonus when dealing damage vs. enemy with that status. <br>
                 Enemy Scorched = One time bonus on status proc.
             </p>
@@ -306,7 +307,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -706,7 +712,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -838,7 +849,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -886,7 +902,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -952,7 +973,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -1002,7 +1028,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -1052,7 +1083,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -1110,7 +1146,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
@@ -1160,7 +1201,12 @@
                     <th>Rank 9</th>
                     <th><span class="text-divine-text-color">Rank 20</span></th>
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
-                    <th>Possible Inheritable ?</th>
+                    <th>
+                        <div class="flex flex-col items-center gap-1">
+                            Possible Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
 
                 <!-- ==========
