Added TODO comments to cores_attributes and cores_list .html files.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -1829,5 +1829,6 @@
 
 <!-- TODO -->
 <!--
-    - 
+    - Add proper icons to the attributes where needed.
+    - Add proper text colors to the attributes where needed.
 -->
