--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -2848,5 +2848,6 @@
 
 <!-- TODO -->
 <!--
-    - 
+    - Add proper icons to the attributes where needed.
+    - Add proper text colors to the attributes where needed. 
 -->
