--- a/nioh2/tools/achievements/achievements.html
+++ b/nioh2/tools/achievements/achievements.html
@@ -463,7 +463,7 @@
                     </div></td>
                     <td>
                         Got <a class="text-sky-400 hover:text-sky-600" href="">Gyuki</a> to attack the dam in the main mission:
-                        <a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a>. You can view the guide
+                        <a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a>. You can view the guide
                         <a class="text-sky-400 hover:text-sky-600" href="https://www.youtube.com/watch?v=M6JUBGR5jPk" target="_blank" rel="noopener noreferrer">here</a>.
                     </td>
                 </tr>
@@ -1012,7 +1012,7 @@
                         <!-- Dawn Region -->
                         <h5 class="text-yellow-400 font-bold">Dawn Region:</h5>
                         <ul class="list-disc list-inside flex flex-col gap-2">
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> (2)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a> (2)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a> (3)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a> (3)</li>
                         </ul><br><br>
@@ -1089,7 +1089,7 @@
                         <!-- Dawn Region -->
                         <h5 class="text-yellow-400 font-bold">Dawn Region</h5>
                         <ul class="list-disc list-inside flex flex-col gap-2">
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> (9)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a> (9)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a> (8)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a> (8)</li>
                         </ul><br><br>
@@ -1152,7 +1152,7 @@
                         <!-- Dawn Region -->
                         <h5 class="text-yellow-400 font-bold">Dawn Region</h5>
                         <ul class="list-disc list-inside flex flex-col gap-2">
-                            <li><a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> (1)</li>
+                            <li><a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">Song of the Yokai</a> (7)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a> (1)</li>
                             <li><a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets on Mount Tenno</a> (1)</li>
