Fixed spelling mistakes for mission names in farming_cores.html. Adjusted the text paragraph order for the main description in lapis.html. Added more content to DOTSamurai_enemies, and DOTSamurai_missions .txt files.

--- a/nioh2/equipment/soul_cores/farming_cores.html
+++ b/nioh2/equipment/soul_cores/farming_cores.html
@@ -595,7 +595,7 @@
                         <img src="./img/koroka.png" alt="Koroka Soul Core image">
                     </a></td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Frenzied Blaze</a> - 2nd shrine <span class="text-red-600 font-bold">(R)</span><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ruin Draws Near</a> - last shrine<br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Floor 15</a>
@@ -611,7 +611,7 @@
                         <img src="./img/dweller.png" alt="Dweller Soul Core image">
                     </a></td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Traces of a Raging Blaze (Twilight Mission)</a> - last shrine<br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Traces of the Raging Blaze (Twilight Mission)</a> - last shrine<br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">The Hollow Fortress</a> - 2nd Shrine <span class="text-red-600 font-bold">(R)</span><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Floor 20</a> <span class="text-red-600 font-bold">(R)</span>
                     </td>
@@ -935,7 +935,7 @@
                         <img src="./img/thunderstorm_oni-bi.png" alt="Thunderstorm Oni-Bi Soul Core image">
                     </a></td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> - 2nd shrine <span class="text-red-600 font-bold">(R)</span><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a> - 2nd shrine <span class="text-red-600 font-bold">(R)</span><br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Abduction</a>
                     </td>
                 </tr>
@@ -1050,7 +1050,7 @@
                         <img src="./img/oboroguruma.png" alt="Oboroguruma Soul Core image">
                     </a></td>
                     <td>
-                        <a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a> - 2nd shrine<br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Pervading Waters</a> - 2nd shrine<br><br>
                         <a class="text-sky-400 hover:text-sky-600" href="">Floor 15</a> <span class="text-red-600 font-bold">(R)</span>
                     </td>
                 </tr>
