--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -258,6 +258,14 @@
             <!-- main image -->
             <img src="./img/lapis_lazuli.png" alt="Lapis Lazuli icon" fetchpriority=high>
 
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl italic leading-relaxed">
+                "Presenting this to <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a> will allow you to 
+                receive and strengthen blessings in the Underworld. A gem found in the Underworld, Lapis Lazuli is regarded as 
+                one of seven treasures in the teachings of Buddhism. When Yama still served as judge to those sent there, the 
+                Underworld was decorated with Lapis Lazuli that shone brilliantly. However, they were scattered and lost after a 
+                great calamity occurred."
+            </p>
+
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
                 Departed), is a rare resource that only drops in the Underworld, and the Depths of the Underworld. Regular 
@@ -267,15 +275,6 @@
                 <span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal rarity</span> 
                 item. Upon completing the entire table <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a>
                 will reward the player with the <span class="text-red-600 font-bold">Hundred Night Incense Smithing Text</span>.
-            </p>
-
-            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl italic leading-relaxed">
-                <span class="font-bold">"</span> Presenting this to 
-                <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a> will allow you to receive and strengthen
-                blessings in the Underworld. A gem found in the Underworld, Lapis Lazuli is regarded as one of seven treasures
-                in the teachings of Buddhism. When Yama still served as judge to those sent there, the Underworld was decorated
-                with Lapis Lazuli that shone brilliantly. However, they were scattered and lost after a great calamity occurred.
-                <span class="font-bold">"</span>
             </p>
         </div>
     </section>
