Updated content in cores_attributes.html.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -1676,7 +1676,7 @@
                     <td>Poison Accumulation [Innate Stat / Cannot Be Rolled]</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>paralysis Accumulation [Innate Stat / Cannot Be Rolled]</td>
+                    <td>Paralysis Accumulation [Innate Stat / Cannot Be Rolled]</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Damage Taken [Innate Stat / Cannot Be Rolled]</td>
